Create endpoint for post solution
